<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".AddDetails">

    <include layout="@layout/toolbar_add_details" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="5dp">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/user"/>

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_change"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="110dp"
            android:layout_marginTop="-50dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/ic_camera" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_person" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/ProfileUserName"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/displayUserName"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:hint="@string/ProfileUserName"
            android:inputType="text"
            android:layout_marginLeft="45dp"
            android:text="Bradely James"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="15dp"
        android:background="@android:color/darker_gray" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_email" />

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/ProfileEMail"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/displayEmail"
            android:layout_width="199dp"
            android:layout_height="wrap_content"
            android:hint="@string/ProfileEMail"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="45dp"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="15dp"
        android:background="@android:color/darker_gray" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_location" />

        <TextView
            android:id="@+id/userLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/ProfileUserLocation"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/displayUserLocation"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:hint="@string/ProfileUserLocation"
            android:inputType="text"
            android:layout_marginLeft="22dp"
            android:text="England"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="15dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_password" />

        <TextView
            android:id="@+id/userPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/ProfileUserPassword"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/displayUserPassword"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:hint="@string/ProfileUserPassword"
            android:inputType="textPassword"
            android:layout_marginLeft="22dp"
            android:text="abc123"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="15dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_dob" />

        <TextView
            android:id="@+id/userDOB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/DOB"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/displayUserDOB"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:hint="@string/DOB"
            android:inputType="date"
            android:layout_marginLeft="22dp"
            android:text="1990/06/14"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="15dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/editProfileBtn"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="-10sp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_btn"
            android:drawableLeft="@drawable/ic_add"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:text="@string/AddDetails"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>